--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -174,6 +174,13 @@ body {
   margin: 0 5px;
 }
 
+.container .right-area .np-link span a {
+  color: #016468;
+  text-decoration: underline;
+  font-size: 1em;
+  cursor: pointer;
+}
+
 .container .right-area .np-link a {
   text-decoration: none;
 }
@@ -193,6 +200,7 @@ body {
   transition: -webkit-transform .3s ease;
   transition: transform .3s ease;
   transition: transform .3s ease, -webkit-transform .3s ease;
+  cursor: pointer;
 }
 
 .container .right-area .np-link a button:hover {
